# Agentic_Camera_Calibration

./: .gitignore  CLAUDE.md  README.md  commands.md  pyproject.toml
config/: defaults.toml
dataset/: dataset_analysis.md
dataset/S0_nominal/run_01/: metadata.json
dataset/S0_nominal/run_02/: metadata.json
dataset/S0_nominal/run_03/: metadata.json
dataset/S0_nominal/run_04/: metadata.json
dataset/S0_nominal/run_05/: metadata.json
dataset/S0_nominal/run_06/: metadata.json
dataset/S0_nominal/run_08/: metadata.json
docs/: PRD.md  architecture.md  auditor.md  capture_guide.md  dataset_capture_playbook.md  fixed_target_eol_dataset_plan.md  idea.md  paper_execution_checklist.md  paper_north_star.md  paper_positioning.md  reference_frame_guide.md  review.md  s3_pose_deviation_plan.md  s4_height_variation_plan.md  s5_partial_visibility_plan.md
src/agentic_camera_calibration/: __init__.py  calibration_engine.py  capture.py  charuco_detector.py  claude_agent.py  cli.py  config.py  dataset_auditor.py  dataset_loader.py  deviation_analyzer.py  evaluator.py  experiment_runner.py  failure_detector.py  lm_studio_agent.py  models.py  nominal_reference.py  openai_agent.py  orchestrator.py  quality_analyzer.py  recovery_executor.py  reporter.py
tests/: test_agent_controller.py  test_capture_plan.py  test_claude_agent.py  test_dataset_auditor.py  test_evaluator.py  test_experiment_runner.py  test_failure_detector.py  test_heuristic_controller.py  test_learned_controller.py  test_live_feedback.py  test_lm_studio_agent.py  test_nominal_reference.py  test_openai_agent.py
(+50 files in other folders)
