[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-camera-calibration"
version = "0.1.0"
description = "Agentic recovery pipeline for single-camera ChArUco calibration experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.2",
  "opencv-contrib-python>=4.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.12",
]

[project.scripts]
accal = "agentic_camera_calibration.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
